// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renderHeader function should return correct header when complete configuration 1`] = `"Connections, {nextUpdate} 45{units.seconds} @ 10:23:40"`;

exports[`renderHeader function should return correct header when incomplete configuration 1 1`] = `"Connections, {nextUpdate} 45{units.seconds}"`;

exports[`renderHeader function should return correct header when incomplete configuration 2 1`] = `"Connections @ 10:23:40"`;

exports[`renderHeader function should return simple string when silent configuration 1`] = `"Connections"`;

exports[`renderNoInfoVelib function should return correct HTML for table cell when no label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Stations {notYet}
   </td>
</tr>"
`;

exports[`renderNoInfoVelib function should return correct HTML for table row when label 1`] = `
"<tr>
   <td class=\\"bright\\">
      Ulbach {notYet}
   </td>
</tr>"
`;

exports[`renderPublicTransport function should return correct HTML when schedule and concatenate arrivals 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         BUS,275
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         Place Charras
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:00
      </td>
</tr>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\"></td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         La Défense
      </td>
      <td></td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         13:15 / 13:30
      </td>
</tr>
</table>"
`;

exports[`renderPublicTransport function should return correct HTML when schedules and concatenate arrivals for transilien 1`] = `
"<table>
   <tr class=\\"Schedules__item bright\\">
      <td class=\\"align-right\\">
         Becon
      </td>
      <td class=\\"align-left\\" style=\\"opacity: 0.5;\\">
         SAINT-NOM LA BRETECHE FORET DE MARLY
      </td>
      <td>
         SEBU
      </td>
      <td class=\\"\\" style=\\"opacity: 0.5;\\">
         11:20 / 11:35 / 11:50
      </td>
</tr>
</table>"
`;

exports[`renderVelib function should return correct HTML when history with trend 1`] = `"<tr></tr>"`;

exports[`renderVelib function should return correct HTML when history without trend 1`] = `
"<tr>
   <td class=\\"align-left\\">
      10
   </td>
   <td class=\\"bright\\">
      2 {velib.bikes} 8 {velib.spaces}
   </td>
   <td class=\\"align-right\\">
      Opera
   </td>
   <td></td>
</tr>"
`;

exports[`renderVelib function should return correct HTML when no history 1`] = `
"<tr>
   <td class=\\"bright\\">
      Opera Bis {notYet}
   </td>
</tr>"
`;

exports[`renderWrapper function should return correct HTML 1`] = `"<div id=\\"IDFTransportWrapper\\" class=\\"IDFTransportWrapper\\"></div>"`;
